--- a/musical.html
+++ b/musical.html
@@ -50,3 +50,13 @@
         <div class="row">
             <div class="col">
                <h1>MUSICAL</h1>
+                <div class="card" style="width: 18rem;">
+            <img src="lalaland.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">LA LA LAND</h5>
+              <p class="card-text">Cuenta la historia de Mia y Sebastian, dos jóvenes artistas que se enamoran en Los Ángeles mientras persiguen sus sueños en el mundo del espectáculo</p>
+              <a href="https://youtu.be/0pdqf4P9MB8?si=2D-ZOlJqlE4MnG1q" class="btn btn-primary">Trailer</a>
+            </div>
+          </div>
+</body>
+</html>
